samples/_failures_safe/1761487818_ca3eda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e965fd2.c: In function ‘main’:
./samples/SAFE/__tmp_0e965fd2.c:172:9: error: expected declaration or statement at end of input
  172 |         fprintf(stderr, "Empty input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_0e965fd2.c:172:9: error: expected declaration or statement at end of input
